<resources>
    <string name="app_name">IronMan</string>
    <string name="editor_activity_title_new_expense">Add Transaction</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="description">Description</string>
    <string name="category">Create Category</string>
    <string name="editor_insert_expense_successful">Expense saved</string>
    <string name="empty_view_title_text">No Transactions</string>
    <string name="editor_activity_title_edit_expense">Edit expense</string>
    <string name="editor_activity_title_add_expense">Add an expense</string>
    <string name="editor_update_expense_failed">update failed</string>
    <string name="editor_update_expense_successful">update successful</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="editor_delete_expense_successful">Expense deleted</string>
    <string name="editor_delete_expense_failed">Error with deleting expense</string>
    <string name="delete_dialog_msg">Delete this expense?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="unknown_breed">Unknown breed</string>
    <string name="total">Total</string>
    <string name="category_type">name of the category</string>
    <string name="country_currency">Country Currency</string>
    <string name="categories">Create Category</string>
    <string name="settings">Settings</string>
    <string name="India">India</string>
    <string name="select_date_format">Select date format</string>
    <string name="week_day">Sunday</string>
    <string name="month_date">1st</string>
    <string name="month">January</string>
    <string name="set_first_day_of_the_month">Set first day of the month</string>
    <string name="firsts_month_of_the_year">Firsts month of the year</string>
    <string name="mm_dd_yyyy">MM/dd/yyyy</string>
    <string name="select_first_day_of_week">Select first day of week</string>
    <string-array name="countries_names">
        <item>Afghanistan</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Bahamas</item>
        <item>Bangladesh</item>

        <item>Belgium</item>

        <item>Bhutan</item>

        <item>Brazil</item>

        <item>Canada</item>

        <item>China</item>

        <item>Costa Rica</item>

        <item>Denmark</item>

        <item>Egypt</item>


        <item>France</item>

        <item>Georgia</item>
        <item>Germany</item>

        <item>Hong Kong</item>
        <item>Hungary</item>
        <item>Iceland</item>
        <item>India</item>
        <item>Indonesia</item>
        <item>Iran</item>

        <item>Israel</item>
        <item>Italy</item>
        <item>Ivory Coast</item>
        <item>Jamaica</item>
        <item>Japan</item>
        <item>Jersey</item>
        <item>Jordan</item>
        <item>Kazakhstan </item>
        <item>Kenya	</item>
        <item>Kiribati</item>
        <item>Kosovo</item>
        <item>Kuwait</item>
        <item>Kyrgyzstan</item>
        <item>Laos</item>
        <item>Latvia</item>
        <item>Lebanon</item>
        <item>Lesotho</item>
        <item>Liberia</item>
        <item>Libya</item>
        <item>Liechtenstein</item>
        <item>Lithuania</item>
        <item>Luxembourg</item>
        <item>Macao	</item>
        <item>Macedonia	</item>
        <item>Madagascar</item>
        <item>Malawi</item>
        <item>Malaysia</item>
        <item>Maldives</item>
        <item>Mali	</item>
        <item>Malta	</item>
        <item>Marshall Islands</item>
        <item>Mauritania</item>
        <item>Mauritius</item>
        <item>Mayotte</item>
        <item>Mexico</item>
        <item>Micronesia</item>
        <item>Moldova</item>
        <item>Monaco</item>
        <item>Mongolia</item>
        <item>Montenegro</item>
        <item>Montserrat</item>
        <item>Morocco</item>
        <item>Mozambique</item>
        <item>Myanmar</item>
        <item>Namibia</item>
        <item>Nauru	</item>
        <item>Nepal</item>
        <item>Netherlands</item>
        <item>Netherlands Antilles	</item>
        <item>New Caledonia	</item>
        <item>New Zealand</item>
        <item>Nicaragua	</item>
        <item>Niger</item>
        <item>Nigeria</item>
        <item>Niue</item>
        <item>North Korea</item>
        <item>Northern Mariana Islands</item>
        <item>Norway</item>
        <item>Oman</item>
        <item>Pakistan</item>
        <item>Palau	</item>
        <item>Palestine	</item>
        <item>Panama</item>
        <item>Papua New Guinea	</item>
        <item>Paraguay</item>
        <item>Peru	</item>
        <item>Philippines</item>
        <item>Pitcairn</item>
        <item>Poland</item>
        <item>Portugal</item>
        <item>Puerto Rico</item>
        <item>Qatar	</item>
        <item>Republic of the Congo</item>
        <item>Reunion</item>
        <item>Romania</item>
        <item>Russia</item>
        <item>Rwanda</item>
        <item>Saint Barthelemy</item>
        <item>Saint Helena</item>
        <item>Saint Kitts and Nevis</item>
        <item>Saint Lucia</item>
        <item>Saint Martin</item>
        <item>Saint Pierre and Miquelon</item>
        <item>Saint Vincent and the Grenadines</item>
        <item>Samoa</item>
        <item>San Marino</item>
        <item>Sao Tome and Principe	</item>
        <item>Saudi Arabia</item>
        <item>Senegal</item>
        <item>Serbia</item>
        <item>Seychelles</item>
        <item>Sierra Leone</item>
        <item>Singapore	</item>
        <item>Sint Maarten</item>
        <item>Slovakia</item>
        <item>Slovenia</item>
        <item>Solomon Islands</item>
        <item>Somalia</item>
        <item>South Africa</item>
        <item>South Korea</item>
        <item>South Sudan</item>
        <item>Spain	</item>
        <item>Sri Lanka</item>
        <item>Sudan	</item>

        <item>Swaziland</item>
        <item>Sweden</item>
        <item>Switzerland</item>
        <item>Syria	</item>

        <item>Turkey</item>
        <item>Uganda</item>

        <item>United Arab Emirates</item>
        <item>United Kingdom</item>
        <item>United States</item>

        <item>Vietnam</item>

    </string-array>
    <string-array name="date_formats">
        <item>DD/MM/YYYY</item>
        <item>MM/DD/YYYY</item>
        <item>YYYY/DD/MM</item>
    </string-array>
    <string-array name="days">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Saturday</item>
    </string-array>
    <string-array name="months">

        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>


    </string-array>
    <string name="cat_general">General</string>
    <string name="cat_shopping">Shopping</string>
    <string name="cat_clothes">Clothes</string>
    <string name="cat_pets">Pets</string>
    <string name="cat_presents">Presents</string>
    <string name="cat_entertainment">Entertainment</string>
    <string name="cat_food">Food</string>
    <string name="cat_health">Health</string>
    <string name="cat_household">Household</string>
    <string name="cat_hygiene">Hygiene</string>
    <string name="familyCatPets">Pets</string>
    <string name="familyCatPresents">Presents</string>
    <string name="cat_sports">Sports</string>
    <string name="cat_transportation">Transportation</string>
    <string name="cat_others">Others</string>
    <string name="content_description_for_image">money making app</string>
    <string name="unit_pet_money">Rs</string>
    <string name="editor_insert_expense_failed">Expense Not Saved</string>
    <string name="note">Note</string>
    <string name="descp">Add description</string>
    <string name="okTextDatePicker">SELECT DATE</string>
    <string name="timeInPM">PM</string>
    <string name="addCategory">Add a new category</string>
    <string name="foodSubGroceries">Groceries</string>
    <string name="foodSubOther">Other</string>
    <string name="foodSubRestaurant">Restaurant</string>
    <string name="foodSubSnack">Snack</string>
    <string name="automobileSubRoadServices">Road Services</string>
    <string name="automobileSubFuel">Fuel</string>
    <string name="automobileSubInsurance">Insurance</string>
    <string name="automobileSubLease">Lease</string>
    <string name="automobileSubMaintenance">Maintenance</string>
    <string name="automobileSubMileage">Mileage</string>
    <string name="automobileSubOther">Other</string>
    <string name="automobileRegistration">Registration</string>
    <string name="entertainmentCatConcert">Concert</string>
    <string name="entertainmentCatMovies">Movies</string>
    <string name="entertainmentCatOther">Other</string>
    <string name="entertainmentCatParty">Party</string>
    <string name="entertainmentCatSports">Sports</string>
    <string name="familyCatChildCare">Child Care</string>
    <string name="familyCatChildEducation">Child Education</string>
    <string name="familyCatOther">Other</string>
    <string name="familyCatToy">Toy</string>
    <string name="healthCareCatDental">Dental</string>
    <string name="healthCareCatEyeCare">Eye Care</string>
    <string name="healthCareCatHealthInsurance">Health Insurance</string>
    <string name="healthCareCatMedical">Medical</string>
    <string name="healthCareCatNutrition">Nutition</string>
    <string name="healthCareCatOther">Other</string>
    <string name="healthCareCatPrescription">Prescription</string>
    <string name="travelCatAirplane">Airplane</string>
    <string name="travelCatCarRental">Car Rental</string>
    <string name="travelCatFood">Food</string>
    <string name="travelCatHotel">Hotel</string>
    <string name="travelCatMisc">Misc</string>
    <string name="travelCatOther">Other</string>
    <string name="travelCatTaxi">Taxi</string>
    <string name="foodSubCafe">Cafe</string>
    <string name="shoppingCatClothing">Clothing</string>
    <string name="shoppingCatCarFootwear">Footwear</string>
    <string name="shoppingCatElectronics">Electronics</string>
    <string name="shoppingCatOther">Other</string>
    <string name="shoppingCatAccessories">Accessories</string>
    <string name="travelCatParkingFees">Parking Fees</string>
    <string name="travelCatPetrol">Petrol</string>
    <string name="familyCatFriendsLovers"><![CDATA[Friends & Lover]]></string>
    <string name="healthCareCatPharmacy">Pharmacy</string>
    <string name="cat_education">education</string>
    <string name="shoppingCatBooks">Books</string>
    <string name="shoppingCatPrintPhotocopy"><![CDATA[Print Out & Photocopy]]></string>
    <string name="action_about">About</string>
    <string name="action_clear_hist">Clear History</string>
    <string name="input_text">Type a problem</string>
    <string name="calc_button">Calculate</string>
    <string name="title_activity_about">About</string>
    <string name="about_text">This app was created by Ben Weinshel</string>
    <string name="button0">0</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="button_decimal">.</string>
    <string name="button_equals">=</string>
    <string name="button_plus">+</string>
    <string name="button_minus">-</string>
    <string name="button_times">×</string>
</resources>