<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.SettingsActivity">

    <LinearLayout
        android:id="@+id/layout_country_currency"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:gravity="center_vertical"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country_currency"

            android:textColor="#2B3D4D" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/India"

            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/grey_transparent" />

    <LinearLayout
        android:id="@+id/creation_category"
        android:layout_width="match_parent"
        android:layout_height="50dp"

        android:layout_margin="10dp"

        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_date_format"
            android:textColor="#2B3D4D" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mm_dd_yyyy" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/grey_transparent" />


    <LinearLayout
        android:id="@+id/selection_week"
        android:layout_width="match_parent"
        android:layout_height="50dp"

        android:layout_margin="10dp"

        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_first_day_of_week"
            android:textColor="#2B3D4D" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/week_day" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/grey_transparent" />


    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/grey_transparent" />


    <LinearLayout
        android:id="@+id/selection_year"
        android:layout_width="match_parent"
        android:layout_height="50dp"

        android:layout_margin="10dp"

        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/firsts_month_of_the_year"
            android:textColor="#2B3D4D" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/month" />


    </LinearLayout>

</LinearLayout>