<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.android.example.ironman.ui.EditActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin">

        <LinearLayout
            android:id="@+id/container_measurement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/total" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="horizontal"
                android:paddingLeft="4dp">

                <EditText
                    android:id="@+id/etTotal"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/total"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/label_weight_units"
                    style="@style/EditorUnitsStyle"
                    android:text="@string/unit_pet_money" />
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/container_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="horizontal">


                <Spinner
                    android:id="@+id/spinner_category"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="2"
                    android:paddingEnd="16dp"
                    android:paddingRight="16dp"
                    android:spinnerMode="dropdown" />

            </LinearLayout>

            <TextView
                android:id="@+id/tvAddCategory"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:text="@string/addCategory"
                android:textSize="16sp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/note" />


            <EditText
                android:id="@+id/etNote"
                style="@style/EditorFieldStyle"
                android:hint="@string/descp"
                android:inputType="text" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"

                android:textAlignment="center"
                tools:text="Time" />

            <Button
                android:id="@+id/btnDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:hint="DATE" />


        </LinearLayout>


        <TextView
            android:id="@+id/tvColorChangeDateTimePicker"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text="change the color of data time picker"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="#123456"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="32sp" />

        <Spinner
            android:id="@+id/color_mode_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_done"
        android:tint="@android:color/white"
        app:backgroundTint="@color/colorPrimary"
        app:elevation="6dp"
        app:fabSize="normal" />


</LinearLayout>


