<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/note_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/main_activity_margin"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/main_activity_margin">

        <TextView
            android:id="@+id/tvtotal"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="#2B3D4D"
            tools:text="@string/total" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvCategory"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_marginTop="@dimen/main_activity_margin"
                android:layout_weight="2"
                android:paddingBottom="@dimen/main_activity_margin"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="#2B3D4D"
                tools:text="@string/category_type" />

            <TextView
                android:id="@+id/tvNote"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/main_activity_margin"
                android:layout_weight="3"
                android:paddingBottom="@dimen/main_activity_margin"

                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="#AEB6BD"
                tools:text="@string/note" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvDate"
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/main_activity_margin"
            android:ellipsize="end"
            android:paddingBottom="@dimen/main_activity_margin"
            android:textColor="@android:color/black"
            tools:text="Date" />


        <TextView
            android:id="@+id/tvTime"
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/main_activity_margin"
            android:ellipsize="end"
            android:paddingBottom="@dimen/main_activity_margin"
            android:textColor="@android:color/black"
            tools:text="Date" />
    </LinearLayout>
</android.support.v7.widget.CardView>